# discordpp

./: CMakeLists.txt  README.md
discordpp/: bot.hh  call.hh  snowflake.hh
